mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -2,9 +2,10 @@
 <!-- 
 Copyright
 Adding changes bef rebasing conflicts
+changes from master
 -->
 <head>
-	<title>Niceeeee website</title>
+	<title>Masterrrr</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
