--- a/simple.html
+++ b/simple.html
@@ -2,10 +2,9 @@
 <!-- 
 Copyright
 Adding changes bef rebasing conflicts
-branch big trouble
 -->
 <head>
-	<title>Masterrrr</title>
+	<title>Masterrrr, little trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
