--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@ Adding changes bef rebasing conflicts
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2025</p>
+		<p>&copy; Company 2025,all rights res</p>
 	</footer>
 </body>
 </html>
