Done with simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright
 Adding changes bef rebasing conflicts
 -->
 <head>
-	<title>Masterrrr, little trouble</title>
+	<title>Stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@ Adding changes bef rebasing conflicts
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Niceeeee
+			Niceeeee adding more imp
 		</p>
 	</main>
 	<footer class="container">
