updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright
 Adding changes bef rebasing conflicts
 -->
 <head>
-	<title>Stash example for branch</title>
+	<title>Tagging cmp ex</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
